--- a/html/reservas.html
+++ b/html/reservas.html
@@ -4,32 +4,93 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>RESERVAS</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+
+	<!-- inicio nav -->
+
     <header>
-        <nav>
-            <ul>
-            	<li><a href="../index.html">Espiti</a></li>
-				<li><a href="sedes.html">Sedes</a></li>
-				<li><a href="menu.html">Menu</a></li>
-				<li><a href="tienda.html">Tienda</a></li>
-			 	<li><a href="reservas.html">Reservas</a></li>
-            </ul>
-        </nav>
-    </header>	
+        <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
+			<div class="container-fluid">
+				<a class="navbar-brand " href="index.html">
+					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="../index.html">Espiti</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/sedes.html">Sedes</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/menu.html">Menu</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/tienda.html">Tienda</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/reservas.html">Reservas</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+    </header>
+
+	<!-- fin nav -->
+
+	<!-- inicio carousel -->
+
+	<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="../imagenes/sja.png"alt="sala de junta 1">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/sjb.png"alt="sala de junta 2">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/sjc.png"alt="sala de junta 3">
+			</div>
+		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</button>
+	</div>
+
+	<!-- fin carousel 
+<div class="list-group">
+  	<label class="list-group-item">
+    <input class="form-check-input me-1"
+</div>-->
 
 	<div>
-		<form>
+		<form class="container bgSwhite">
 			<fieldset>
-				<legend>Seleccione una sala:</legend>
-	            <label><input type="radio" name="sala" value="sala-A">Sala de juntas A (Max. 15 pers.)</label>
-    	        <br>
-        	    <label><input type="radio" name="sala" value="sala-B">Sala de juntas B (Max. 10 pers.)</label>
-            	<br>
-	            <label><input type="radio" name="sala" value="sala-C">Sala de juntas C (Max. 6 pers.)</label>
-    	        <br>
+
+				<legend class="list-group">Seleccione una sala:</legend>
+
+	            <label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="sala" value="sala-A">Sala de juntas A (Max. 15 pers.)
+				</label>
+        	    <label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="sala" value="sala-B">Sala de juntas B (Max. 10 pers.)
+				</label>
+	            <label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="sala" value="sala-C">Sala de juntas C (Max. 6 pers.)
+				</label>
 			</fieldset>
 
         	<fieldset>
@@ -71,21 +132,17 @@
         		<br>
         	</fieldset>
 
-        	<fieldset>
-				<legend>Contacto</legend>
-				<label for="nombreapellido">Nombre y Apellido</label>
-				<input type="text" id="nombreapellido" required placeholder="Rodrigo Gutierrez">
-				<br>
-				<label for="correoelectronico">Correo Electronico</label>
-				<input type="email" id="correoelectronico" required placeholder="r-gutierrez@email.com">
-				<br>
-				<label for="telefono">Telefono</label>
-				<input type="tel" id="telefono" required placeholder="+(54) 9 11 1234-5678">
-				<br>
-				<label for="mensaje">Mensaje</label>
-				<br>
-				<textarea cols="70" rows="10" id="mensaje" required placeholder="Comentarios y aclaraciones."></textarea>
-			</fieldset>
+        	<div class="mb-3">
+				<h2>Contacto</h2>
+				<label class="form-label" for="nombreapellido">Nombre y Apellido</label>
+				<input class="form-control" type="text" id="nombreapellido" required placeholder="Rodrigo Gutierrez">
+				<label class="form-label" for="correoelectronico">Correo Electronico</label>
+				<input class="form-control" type="email" id="correoelectronico" required placeholder="r-gutierrez@email.com">
+				<label class="form-label" for="telefono">Telefono</label>
+				<input class="form-control" type="tel" id="telefono" required placeholder="+(54) 9 11 1234-5678">
+				<label class="form-label" for="mensaje">Mensaje</label>
+				<textarea class="form-control" rows="10" id="mensaje" required placeholder="Comentarios y aclaraciones."></textarea>
+			</div>
 
 			<br>
 			<hr>
@@ -124,6 +181,8 @@
 			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
 	    </div>
 	</footer>
-    
+    	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
