--- a/html/tienda.html
+++ b/html/tienda.html
@@ -4,21 +4,46 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>TIENDA</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<header>
-        <nav>
-            <ul>
-            	<li><a href="../index.html">Espiti</a></li>
-				<li><a href="sedes.html">Sedes</a></li>
-				<li><a href="menu.html">Menu</a></li>
-				<li><a href="tienda.html">Tienda</a></li>
-			 	<li><a href="reservas.html">Reservas</a></li>
-            </ul>
-        </nav>
+	<!-- inicio nav -->
+
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
+			<div class="container-fluid">
+				<a class="navbar-brand " href="index.html">
+					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="../index.html">Espiti</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/sedes.html">Sedes</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/menu.html">Menu</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/tienda.html">Tienda</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../html/reservas.html">Reservas</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
     </header>
+
+	<!-- fin nav -->
 
 	<div>
 		<section>
@@ -71,5 +96,8 @@
 			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
 	    </div>
 	</footer>
+		
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
