correccion error ruta logo

--- a/html/menu.html
+++ b/html/menu.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
 			<div class="container-fluid">
-				<a class="navbar-brand " href="index.html">
+				<a class="navbar-brand " href="../index.html">
 					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,12 +48,22 @@
     <!-- inicio del menu -->
     <section>
         <div id="menu">
+            <!--             agregar cards
+
+            <div class="card border-success mb-3" style="max-width: 18rem;">
+                <div class="card-header bg-transparent border-success">Header</div>
+                <div class="card-body text-success">
+                  <h5 class="card-title">Success card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+                <div class="card-footer bg-transparent border-success">Footer</div>
+              </div>
+            -->
             <h2>MENU</h2>
         </div>
         <div id="promos">
             <h3>PROMOS</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
         <div id="box">
             <h3>BOX REGALO</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
