--- a/html/reservas.html
+++ b/html/reservas.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
 			<div class="container-fluid">
-				<a class="navbar-brand " href="index.html">
+				<a class="navbar-brand " href="../index.html">
 					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,27 +48,61 @@
 
 	<!-- inicio carousel -->
 
-	<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="../imagenes/sja.png"alt="sala de junta 1">
-			</div>
-			<div class="carousel-item">
-				<img src="../imagenes/sjb.png"alt="sala de junta 2">
-			</div>
-			<div class="carousel-item">
-				<img src="../imagenes/sjc.png"alt="sala de junta 3">
-			</div>
+	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+		<div class="carousel-indicators">
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
+		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img src="../imagenes/ph-juntas-0.webp" class="d-block h-50 w-100 h-50" alt="sala-de-juntas-0">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-1.webp" class="d-block w-100 " alt="sala-de-juntas-1">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-2.webp" class="d-block w-100" alt="sala-de-juntas-2">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-3.webp" class="d-block w-100" alt="sala-de-juntas-3">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-4.webp" class="d-block w-100" alt="sala-de-juntas-4">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-5.webp" class="d-block w-100" alt="sala-de-juntas-5">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-6.webp" class="d-block w-100" alt="sala-de-juntas-6">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-7.webp" class="d-block w-100" alt="sala-de-juntas-7">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-8.webp" class="d-block w-100" alt="sala-de-juntas-8">
+		  </div>
+		  <div class="carousel-item">
+			<img src="../imagenes/ph-juntas-9.webp" class="d-block w-100" alt="sala-de-juntas-9">
+		  </div>
+
+		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="visually-hidden">Previous</span>
 		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="visually-hidden">Next</span>
 		</button>
-	</div>
+	  </div>
 
 	<!-- fin carousel 
 <div class="list-group">
@@ -79,9 +113,7 @@
 	<div>
 		<form class="container bgSwhite">
 			<fieldset>
-
 				<legend class="list-group">Seleccione una sala:</legend>
-
 	            <label class="list-group-item">
 				<input class="form-check-input me-1" type="radio" name="sala" value="sala-A">Sala de juntas A (Max. 15 pers.)
 				</label>
@@ -94,17 +126,22 @@
 			</fieldset>
 
         	<fieldset>
-        		<legend>Tiempo de estancia:</legend>
-            	<label><input type="radio" name="estancia" value="1h">1 hora</label>
-	            <br>
-    	        <label><input type="radio" name="estancia" value="2h">2 horas</label>
-        	    <br>
-            	<label><input type="radio" name="estancia" value="3h">3 horas</label>
-	            <br>
-    	        <label><input type="radio" name="estancia" value="6h">6 horas</label>
-        	    <br>
-            	<label><input type="radio" name="estancia" value="8h">8 horas</label>
-            	<br>
+        		<legend class="list-group">Tiempo de estancia:</legend>
+            	<label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="estancia" value="1h">1 hora
+				</label>
+    	        <label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="estancia" value="2h">2 horas
+				</label>
+            	<label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="estancia" value="3h">3 horas
+				</label>
+    	        <label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="estancia" value="6h">6 horas
+				</label>
+            	<label class="list-group-item">
+				<input class="form-check-input me-1" type="radio" name="estancia" value="8h">8 horas
+				</label>
         	</fieldset>
 
         	<fieldset>
@@ -113,23 +150,31 @@
         	</fieldset>
 
         	<fieldset>
-        		<legend>Servicios requeridos</legend>
-        		<label><input type="checkbox" name="servicios" value="ninguno">Ningun servicio</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="proyector">Proyector</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="d/m-simple">Desayuno/merienda simple</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="d/m-completo">Desayuno/merienda completo</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="a/c-simple">Almuerso/cena simple</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="a/c-completo">Almuerso/cena completo</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="break-simple">Break simple</label>
-        		<br>
-        		<label><input type="checkbox" name="servicios" value="break-completo">Break completo</label>
-        		<br>
+        		<legend class="list-group">Servicios requeridos</legend>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="ninguno">Ningun servicio
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="proyector">Proyector
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="d/m-simple">Desayuno/merienda simple
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="d/m-completo">Desayuno/merienda completo
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="a/c-simple">Almuerso/cena simple
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="a/c-completo">Almuerso/cena completo
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="break-simple">Break simple
+				</label>
+        		<label class="list-group-item">
+				<input class="form-check-input me-1" type="checkbox" name="servicios" value="break-completo">Break completo
+				</label>
         	</fieldset>
 
         	<div class="mb-3">
@@ -141,7 +186,7 @@
 				<label class="form-label" for="telefono">Telefono</label>
 				<input class="form-control" type="tel" id="telefono" required placeholder="+(54) 9 11 1234-5678">
 				<label class="form-label" for="mensaje">Mensaje</label>
-				<textarea class="form-control" rows="10" id="mensaje" required placeholder="Comentarios y aclaraciones."></textarea>
+				<textarea class="form-control" rows="5" id="mensaje" required placeholder="Comentarios y aclaraciones."></textarea>
 			</div>
 
 			<br>
