--- a/html/tienda.html
+++ b/html/tienda.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
 			<div class="container-fluid">
-				<a class="navbar-brand " href="index.html">
+				<a class="navbar-brand " href="../index.html">
 					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
