--- a/html/reservas.html
+++ b/html/reservas.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>RESERVAS</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
+
 <body>
 
 	<!-- inicio nav -->
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
+	<header>
+		<nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
 			<div class="container-fluid">
 				<a class="navbar-brand " href="../index.html">
-					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
+					<img class="logoCafe" src="../imagenes/logo.webp" alt="">
 				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -42,7 +49,7 @@
 				</div>
 			</div>
 		</nav>
-    </header>
+	</header>
 
 	<!-- fin nav -->
 
@@ -50,59 +57,67 @@
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 		<div class="carousel-indicators">
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
-		  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+				aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+				aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+				aria-label="Slide 3"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+				aria-label="Slide 4"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+				aria-label="Slide 5"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+				aria-label="Slide 6"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+				aria-label="Slide 7"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+				aria-label="Slide 8"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
+				aria-label="Slide 9"></button>
 		</div>
-		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<img src="../imagenes/ph-juntas-0.webp" class="d-block h-50 w-100 h-50" alt="sala-de-juntas-0">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-1.webp" class="d-block w-100 " alt="sala-de-juntas-1">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-2.webp" class="d-block w-100" alt="sala-de-juntas-2">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-3.webp" class="d-block w-100" alt="sala-de-juntas-3">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-4.webp" class="d-block w-100" alt="sala-de-juntas-4">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-5.webp" class="d-block w-100" alt="sala-de-juntas-5">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-6.webp" class="d-block w-100" alt="sala-de-juntas-6">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-7.webp" class="d-block w-100" alt="sala-de-juntas-7">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-8.webp" class="d-block w-100" alt="sala-de-juntas-8">
-		  </div>
-		  <div class="carousel-item">
-			<img src="../imagenes/ph-juntas-9.webp" class="d-block w-100" alt="sala-de-juntas-9">
-		  </div>
+		<div id="carouselReservas" class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="../imagenes/ph-juntas-0.webp" class=" imgReservas d-block w-100" alt="sala-de-juntas-0">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-1.webp" class="d-block w-100 " alt="sala-de-juntas-1">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-2.webp" class="d-block w-100" alt="sala-de-juntas-2">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-3.webp" class="d-block w-100" alt="sala-de-juntas-3">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-4.webp" class="d-block w-100" alt="sala-de-juntas-4">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-5.webp" class="d-block w-100" alt="sala-de-juntas-5">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-6.webp" class="d-block w-100" alt="sala-de-juntas-6">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-7.webp" class="d-block w-100" alt="sala-de-juntas-7">
+			</div>
+			<div class="carousel-item">
+				<img src="../imagenes/ph-juntas-8.webp" class="d-block w-100" alt="sala-de-juntas-8">
+			</div>
+
 
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Previous</span>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
 		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="visually-hidden">Next</span>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
 		</button>
-	  </div>
+	</div>
 
 	<!-- fin carousel 
 <div class="list-group">
@@ -114,79 +129,91 @@
 		<form class="container bgSwhite">
 			<fieldset>
 				<legend class="list-group">Seleccione una sala:</legend>
-	            <label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="sala" value="sala-A">Sala de juntas A (Max. 15 pers.)
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="sala" value="sala-A">Sala de juntas A (Max.
+					15 pers.)
 				</label>
-        	    <label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="sala" value="sala-B">Sala de juntas B (Max. 10 pers.)
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="sala" value="sala-B">Sala de juntas B (Max.
+					10 pers.)
 				</label>
-	            <label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="sala" value="sala-C">Sala de juntas C (Max. 6 pers.)
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="sala" value="sala-C">Sala de juntas C (Max.
+					6 pers.)
 				</label>
 			</fieldset>
 
-        	<fieldset>
-        		<legend class="list-group">Tiempo de estancia:</legend>
-            	<label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="estancia" value="1h">1 hora
+			<fieldset>
+				<legend class="list-group">Tiempo de estancia:</legend>
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="estancia" value="1h">1 hora
 				</label>
-    	        <label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="estancia" value="2h">2 horas
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="estancia" value="2h">2 horas
 				</label>
-            	<label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="estancia" value="3h">3 horas
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="estancia" value="3h">3 horas
 				</label>
-    	        <label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="estancia" value="6h">6 horas
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="estancia" value="6h">6 horas
 				</label>
-            	<label class="list-group-item">
-				<input class="form-check-input me-1" type="radio" name="estancia" value="8h">8 horas
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="radio" name="estancia" value="8h">8 horas
 				</label>
-        	</fieldset>
+			</fieldset>
 
-        	<fieldset>
-        		<legend>Selecciones la/s fecha/s:</legend>
-        		<input type=”date” id=”fecha” name=”fecha” required placeholder="dd/mm/aa">
-        	</fieldset>
+			<fieldset>
+				<legend>Selecciones la/s fecha/s:</legend>
+				<input type=”date” id=”fecha” name=”fecha” required placeholder="dd/mm/aa">
+			</fieldset>
 
-        	<fieldset>
-        		<legend class="list-group">Servicios requeridos</legend>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="ninguno">Ningun servicio
+			<fieldset>
+				<legend class="list-group">Servicios requeridos</legend>
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios" value="ninguno">Ningun
+					servicio
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="proyector">Proyector
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios" value="proyector">Proyector
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="d/m-simple">Desayuno/merienda simple
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios"
+						value="d/m-simple">Desayuno/merienda simple
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="d/m-completo">Desayuno/merienda completo
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios"
+						value="d/m-completo">Desayuno/merienda completo
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="a/c-simple">Almuerso/cena simple
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios"
+						value="a/c-simple">Almuerso/cena simple
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="a/c-completo">Almuerso/cena completo
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios"
+						value="a/c-completo">Almuerso/cena completo
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="break-simple">Break simple
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios" value="break-simple">Break
+					simple
 				</label>
-        		<label class="list-group-item">
-				<input class="form-check-input me-1" type="checkbox" name="servicios" value="break-completo">Break completo
+				<label class="list-group-item">
+					<input class="form-check-input me-1" type="checkbox" name="servicios" value="break-completo">Break
+					completo
 				</label>
-        	</fieldset>
+			</fieldset>
 
-        	<div class="mb-3">
+			<div class="mb-3">
 				<h2>Contacto</h2>
 				<label class="form-label" for="nombreapellido">Nombre y Apellido</label>
 				<input class="form-control" type="text" id="nombreapellido" required placeholder="Rodrigo Gutierrez">
 				<label class="form-label" for="correoelectronico">Correo Electronico</label>
-				<input class="form-control" type="email" id="correoelectronico" required placeholder="r-gutierrez@email.com">
+				<input class="form-control" type="email" id="correoelectronico" required
+					placeholder="r-gutierrez@email.com">
 				<label class="form-label" for="telefono">Telefono</label>
 				<input class="form-control" type="tel" id="telefono" required placeholder="+(54) 9 11 1234-5678">
 				<label class="form-label" for="mensaje">Mensaje</label>
-				<textarea class="form-control" rows="5" id="mensaje" required placeholder="Comentarios y aclaraciones."></textarea>
+				<textarea class="form-control" rows="5" id="mensaje" required
+					placeholder="Comentarios y aclaraciones."></textarea>
 			</div>
 
 			<br>
@@ -204,30 +231,33 @@
 
 	<!-- inicio de pie de pagina // agregar links-->
 	<footer>
-    	<div class="cajaFooter">
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-	        	<a href="#">DIRECCION 1234</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-	        	<a href="#" > 11-1234-5678</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-	        	<a href="#" > ESPITI_COFFEE</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="../imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-	        	<a href="#" > ESPITI_COFFEE</a>
-        	</div>
-        </div>
+		<div class="cajaFooter">
+			<div class="cajita">
+				<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
+				<a href="#">DIRECCION 1234</a>
+			</div>
+			<div class="cajita">
+				<img src="../imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
+				<a href="#"> 11-1234-5678</a>
+			</div>
+			<div class="cajita">
+				<img src="../imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
+				<a href="#"> ESPITI_COFFEE</a>
+			</div>
+			<div class="cajita">
+				<img src="../imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
+				<a href="#"> ESPITI_COFFEE</a>
+			</div>
+		</div>
 		<div class="copy">
 			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
-	    </div>
+		</div>
 	</footer>
-    	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
