--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> -ESPITI- </title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <!--hola-->
+
 <body id="gridIndex">
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bgMarron" id="botonera">
 			<div class="container-fluid">
 				<a class="navbar-brand logoCafe" href="index.html">
-					<img class="logoCafe" src="imagenes/logo.webp" alt="" >
+					<img class="logoCafe" src="imagenes/logo.webp" alt="">
 				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -48,69 +55,88 @@
 		<p><b>COFFEE AND DESSERTS</b></p>
 	</section>
 	<section id="fotos">
-		<img src="imagenes/ab.png"alt="Imagen de catering dulce">
-		<img src="imagenes/budines.png"alt="Imagen de budines">
-		<img src="imagenes/cd.png"alt="Imagen de postres dulce">
-		<img src="imagenes/sja.png"alt="sala de junta 1">
-		<img src="imagenes/sjb.png"alt="sala de junta 2">
-		<img src="imagenes/sjc.png"alt="sala de junta 3">
+		<img src="imagenes/ab.png" alt="Imagen de catering dulce">
+		<img src="imagenes/budines.png" alt="Imagen de budines">
+		<img src="imagenes/cd.png" alt="Imagen de postres dulce">
+		<img src="imagenes/sja.png" alt="sala de junta 1">
+		<img src="imagenes/sjb.png" alt="sala de junta 2">
+		<img src="imagenes/sjc.png" alt="sala de junta 3">
 	</section>
 	<!-- fin banner + imagenes de la cafeteria -->
 
-	<!-- inico secciones nosotros + valores -->
+	<!-- inico secciones nosotros + valores  clase .marg-->
 	<section id="nosotros" class="marg">
 		<h3>Sobre Nosotros</h3>
-		 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+			anim id est laborum.</p>
 	</section>
 	<section id="valores" class="marg">
 		<h3>Mision</h3>
-		 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
-		 <h3>Vision</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
-	 	<h3>Valor</h3>
-	 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
+		<h3>Vision</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
+		<h3>Valor</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua. </p>
 	</section>
 	<!-- fin secciones nosotros + valores -->
 
 	<!-- inico seccion compromisos-->
 	<section id="compromisos" class="marg">
 		<h3>Compromisos</h3>
-	 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eufugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<img src="imagenes/proceso1.png" alt="Proceso de seleccion de cafe">
-		 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		 	<img src="imagenes/proceso2.png" alt="Proceso de seleccion de cafe">
-		 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<img src="imagenes/proceso3.png" alt="Proceso de seleccion de cafe">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eufugiat
+			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+			anim id est laborum.</p>
+		<img src="imagenes/proceso1.png" alt="Proceso de seleccion de cafe">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+			anim id est laborum.</p>
+		<img src="imagenes/proceso2.png" alt="Proceso de seleccion de cafe">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+			magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+			commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+			nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+			anim id est laborum.</p>
+		<img src="imagenes/proceso3.png" alt="Proceso de seleccion de cafe">
 	</section>
 	<!-- fin seccion compromisos-->
 
 	<!-- inicio de pie de pagina // agregar links-->
 	<footer>
-    	<div class="cajaFooter">
-	        <div class="cajita">
-	        	<img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-	        	<a href="#">DIRECCION 1234</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-	        	<a href="#" > 11-1234-5678</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-	        	<a href="#" > ESPITI_COFFEE</a>
-	        </div>
-	        <div class="cajita">
-	        	<img src="imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-	        	<a href="#" > ESPITI_COFFEE</a>
-        	</div>
-        </div>
+		<div class="cajaFooter">
+			<div class="cajita">
+				<img src="imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
+				<a href="#">DIRECCION 1234</a>
+			</div>
+			<div class="cajita">
+				<img src="imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
+				<a href="#"> 11-1234-5678</a>
+			</div>
+			<div class="cajita">
+				<img src="imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
+				<a href="#"> ESPITI_COFFEE</a>
+			</div>
+			<div class="cajita">
+				<img src="imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
+				<a href="#"> ESPITI_COFFEE</a>
+			</div>
+		</div>
 		<div class="copy">
 			<small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
-	    </div>
+		</div>
 	</footer>
 
-	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
