--- a/html/menu.html
+++ b/html/menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +13,8 @@
 <body>
 	<!-- inicio nav -->
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
+
+        <nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
 			<div class="container-fluid">
 				<a class="navbar-brand " href="../index.html">
 					<img class="logoCafe" src="../imagenes/logo.webp" alt="" >
@@ -42,7 +43,6 @@
 				</div>
 			</div>
 		</nav>
-    </header>
 
 	<!-- fin nav -->
     <!-- inicio del menu -->
