--- a/index.html
+++ b/index.html
@@ -12,42 +12,41 @@
 		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<!--hola-->
 
-<body id="gridIndex">
-	<header>
-		<nav class="navbar navbar-expand-md navbar-light bgMarron" id="botonera">
-			<div class="container-fluid">
-				<a class="navbar-brand logoCafe" href="index.html">
-					<img class="logoCafe" src="imagenes/logo.webp" alt="">
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">Espiti</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/sedes.html">Sedes</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/menu.html">Menu</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/tienda.html">Tienda</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="html/reservas.html">Reservas</a>
-						</li>
-					</ul>
-				</div>
+<body>
+
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron" id="botonera">
+		<div class="container-fluid d-flex justify-content-around">
+			<a href="index.html">
+				<img class="logoCafe " src="imagenes/logo.webp" alt="">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Espiti</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="html/sedes.html">Sedes</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="html/menu.html">Menu</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="html/tienda.html">Tienda</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="html/reservas.html">Reservas</a>
+					</li>
+				</ul>
 			</div>
-		</nav>
-	</header>
+		</div>
+	</nav>
+
 
 	<!-- inicio banner + imagenes de la cafeteria -->
 	<section id="banner">
