--- a/html/menu.html
+++ b/html/menu.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Menu de cafeteria spiti coffee and desserts con opciones dulces, saladas, para almorzar, compartir, regalar, opciones apto celiaco, vegetarianoso o veganos">
+	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, cafe, cafe molido, cafetera, metodo de filtrado, espresso, capuccino. flat white, brunch, lunch, celiaco, vegano, vegetariano">
 	<title>MENU</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
