--- a/html/tienda.html
+++ b/html/tienda.html
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Tienda de cafeteria spiti coffee and desserts con categorias de cursos cafe en grano o molido productos y gift cards">
+	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, cafe en grano, cafe molido, cafetera, manual, metodo de filtrado">
 	<title>TIENDA</title>
+	<meta name="description" content="Pagina de inicio de spiti coffe and desserts con informacion">
+	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, alquiler oficina">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
