prueba de verificacion en google

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="Yoh5imjzDlYa6o_bt29J4OJPDAmz_3pQVpNPIzp7lhc" />
 	<meta name="description" content="Pagina de inicio de spiti coffe and dessert, historia de sus comienzos y con sus compromisos a la comunidad">
 	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, alquiler oficina">
 	<title> -ESPITI- </title>
